# ethrex-tooling

./: .gitignore  Cargo.toml
.cargo/: config.toml.example
archive_sync/: Cargo.toml
archive_sync/src/: main.rs
benchmarkoor-dashboard/: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
benchmarkoor-dashboard/app/: client.py  config.py  db.py  logparse.py  main.py  parse.py  queries.py  sync.py
benchmarkoor-dashboard/app/static/: styles.css
benchmarkoor-dashboard/app/templates/: _compare_table.html  base.html  compare.html  coverage.html  index.html  leaderboard.html  merkle.html  op.html  run.html  test_detail.html  trends.html
devnets_monitor/: .gitignore  CLAUDE.md  README.md  pyproject.toml
devnets_monitor/.claude/skills/devnet-ops/: SKILL.md
devnets_monitor/config/: devnets.yaml  eips.json  schema.md
devnets_monitor/config/devnets/: glamsterdam-devnet-5.yaml
devnets_monitor/devnets/: __init__.py  analyze.py  assertoor.py  bal.py  blobtrack.py  cli.py  collect.py  config.py  deploytl.py  detect.py  discover.py  dora.py  eiptrack.py  epbs.py  exectime.py  forks.py  forkview.py  health.py  hive.py  network.py  peers.py  proposals.py  remote.py  spamoor.py  ssh.py  status.py  store.py  wipe.py
devnets_monitor/docs/: architecture.md  cron-example.md  devnet-ops-skill.md  devnet-ops.md
devnets_monitor/docs/history/: _template.md
devnets_monitor/web/: __init__.py  aggregate.py  app.py
devnets_monitor/web/templates/: assertoor.html  bal.html  base.html  blobs.html  clients.html  command_center.html  deploy.html  eiptrack.html  epbs.html  events.html  exectime.html  forks.html  hive.html  incidents.html  index.html  network.html  node.html  proposals.html  spamoor.html
dora_monitor/: .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml
dora_monitor/dora_monitor/: __main__.py  checks.py  config.py  discord.py  dora.py  main.py  notify.py  slack.py  state.py
ef_tests/: run-ef-tests.py
ef_tests/blockchain/: .fixtures_url_zkevm  Cargo.toml  Makefile  fork.rs  test_runner.rs  types.rs
ef_tests/blockchain/tests/: all.rs
ef_tests/engine/: .fixtures_url_amsterdam  .gitignore  Cargo.toml  Makefile
ef_tests/engine/src/: engine_ctx.rs  exception_mapper.rs  fixture.rs  harness.rs  lib.rs  report.rs  runner.rs
ef_tests/engine/tests/: all.rs
ef_tests/state/: .fixtures_url_amsterdam  Cargo.toml  Makefile  deserialize.rs  types.rs  utils.rs
ef_tests/state/runner/: levm_runner.rs  mod.rs  revm_db.rs  revm_runner.rs
ef_tests/state_v2/: Cargo.toml  Makefile
ef_tests/state_v2/src/: main.rs
ef_tests/state_v2/src/modules/: block_runner.rs  deserialize.rs  error.rs  mod.rs  parser.rs  report.rs  result_check.rs  runner.rs  statetest.rs  types.rs  utils.rs
hardhat/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
hardhat/scripts/: validate-upgrades.js
hardhat/test/: counter.test.js  upgradeability.local.test.js
hive_report/: Cargo.toml
hive_report/src/: main.rs
import_benchmark/: Makefile  README.md  benchmark.sh  parse_bench.py
l2/dev/: README.md  docker-compose.yaml
load_test/: Cargo.toml
load_test/src/: main.rs
loc/: Cargo.toml
loc/src/: main.rs  report.rs
migrations/: Cargo.toml
migrations/src/: utils.rs
monitor/: Cargo.toml
monitor/src/: app.rs  config.rs  error.rs  lib.rs  utils.rs
monitor/src/widget/: batches.rs  chain_status.rs  mempool.rs  node_status.rs  rich_accounts.rs
reorgs/: Cargo.toml
reorgs/src/: main.rs  simulator.rs
repl/: Cargo.toml  README.md
repl/src/: client.rs  completer.rs  ens.rs  formatter.rs  lib.rs  main.rs  parser.rs  proof_callback.rs  repl.rs  variables.rs
repl/src/commands/: admin.rs  debug.rs  engine.rs  eth.rs  mod.rs  net.rs  txpool.rs  web3.rs
repl/tests/: e2e.rs
sync/: .env.example  Makefile  README.md  docker-compose.multisync.yaml  docker-compose.yml  docker_monitor.py  peer_top.py
trace_compare/: README.md  compare.sh
