[project]
name = "benchmarkoor-dashboard"
version = "0.1.0"
description = "Interactive dashboard over the Benchmarkoor API: ethrex coverage gaps, below-others, leaderboard, trends."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "jinja2>=3.1",
    "plotly>=5.22",
    "pandas>=2.2",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.6"]
