[project]
name = "ethrex-devnets"
version = "0.1.0"
description = "Ops and monitoring toolkit for ethrex on ethpandaops devnets"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.scripts]
dv = "devnets.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devnets", "web"]

[tool.uv]
