[project]
name = "dora_monitor"
version = "0.1.0"
description = "Monitor a Dora explorer API for client-specific issues and alert to Slack."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.scripts]
dora-monitor = "dora_monitor.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dora_monitor*"]
