[package]
name = "ethrex-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-common.workspace = true
ethrex-config.workspace = true
ethrex-l2-common.workspace = true
ethrex-sdk.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-storage.workspace = true
ethrex-storage-rollup.workspace = true

bytes.workspace = true
chrono = "0.4.41"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures.workspace = true
hex.workspace = true
ratatui = "0.29.0"
reqwest.workspace = true
secp256k1.workspace = true
serde.workspace = true
spawned-concurrency.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tui-logger.workspace = true

[lib]
name = "ethrex_monitor"
path = "src/lib.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
redundant_clone = "warn"
