[package]
name = "ef_tests-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-crypto.workspace = true
ethrex-storage.workspace = true
ethrex-rlp.workspace = true
ethrex-vm.workspace = true
ethrex-prover = { workspace = true, default-features = false }
ethrex-guest-program = { workspace = true, default-features = false }

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true
tokio = { workspace = true, features = ["full"] }
datatest-stable = "0.2.9"
regex = "1.11.1"

[lib]
path = "./lib.rs"

[features]
default = ["c-kzg"]
c-kzg = ["ethrex-blockchain/c-kzg"]
sp1 = ["ethrex-guest-program/sp1-build-elf", "ethrex-prover/sp1"]
stateless = []
l2 = ["ethrex-guest-program/l2", "ethrex-prover/l2"]

[[test]]
name = "all"
harness = false
