[package]
name = "ef_tests-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-rpc.workspace = true
ethrex-blockchain.workspace = true
ethrex-p2p.workspace = true
rayon.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
bytes.workspace = true
hex.workspace = true
tempfile.workspace = true
regex = "1.11.1"

[dev-dependencies]
datatest-stable.workspace = true
ctor = "0.2"

[lib]
path = "src/lib.rs"

[[test]]
name = "all"
harness = false

[features]
default = ["c-kzg"]
c-kzg = ["ethrex-blockchain/c-kzg"]
rocksdb = ["ethrex-storage/rocksdb"]
