[package]
name = "ef_tests-state"
version = "0.1.0"
edition = "2024"
authors = ["LambdaClass"]
license = "MIT OR Apache-2.0"

[dependencies]
ethrex-blockchain = { git = "https://github.com/lambdaclass/ethrex", branch = "main", default-features = false }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex", branch = "main", default-features = false }
ethrex-crypto = { git = "https://github.com/lambdaclass/ethrex", branch = "main", default-features = false }
ethrex-storage = { git = "https://github.com/lambdaclass/ethrex", branch = "main" }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex", branch = "main" }
ethrex-vm = { git = "https://github.com/lambdaclass/ethrex", branch = "main", default-features = false }
ethrex-levm = { git = "https://github.com/lambdaclass/ethrex", branch = "main", default-features = false }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# Since we do heavy parsing of ef tests, simd-json is more than 2x faster than serde_json
simd-json = "0.15.1"
bytes = { version = "1.6.0", features = ["serde"] }
colored = "2.1.0"
spinoff = "0.8.0"
thiserror = "2.0.9"
hex = "0.4.3"
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
itertools = "0.13.0"
revm = { version = "27.0.3", features = [
    "serde",
    "std",
    "serde-json",
    "optional_no_base_fee",
    "optional_block_gas_limit",
], default-features = false }
alloy-rlp = "0.3.12"
tokio = { version = "1.41.1", features = ["full"] }
rayon = "1.10.0"

[dev-dependencies]
hex = "0.4.3"

[lib]
path = "./lib.rs"

[features]
default = ["c-kzg", "secp256k1"]
c-kzg = ["ethrex-vm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
secp256k1 = ["ethrex-blockchain/secp256k1", "ethrex-common/secp256k1", "ethrex-vm/secp256k1"]
# Runs EF tests with no_std-compatible crypto fallbacks (k256, num-bigint, kzg-rs)
nostd-crypto = ["ethrex-crypto/kzg-rs"]

[[test]]
name = "all"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = 2
